Added some data buttons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 				<td><strong>Status</strong> - {{row.status}}</td>
 			</tr>
 		</table>
+		<!-- <button class="js-clear">Clear Referrals</button>
+		<button class="js-populate">Populate Referrals</button> -->
 	</body>
 
 </html>
